# commandAGI

./: .dockerignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  Claude + LXDEVNCDockerComputerEnv.json  Claude + LocalPyAutoGUIComputeEnv.json  Claude + LocalPynputComputeEnv.json  Claude + VNCComputerEnv.json  GPT-4o + LXDEVNCDockerComputerEnv.json  GPT-4o + LocalPyAutoGUIComputeEnv.json  GPT-4o + LocalPynputComputeEnv.json  GPT-4o + VNCComputerEnv.json  LICENSE  README.md  build_docs.sh  mkdocs.yml  old.pyproject.toml  pyproject copy.toml  pyproject.toml  rebuild_api_docs.ps1
.github/: CODE_OF_CONDUCT.md  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  integration_request.md
.github/workflows/: deploy-docs.yml
.old/: README.md  pyproject.toml
.old/commandagi_j2/: cli.py  dev.py
.old/commandagi_j2/computers/: base_computer.py  base_docker_computer.py  computer_types.py  kubernetes_computer.py  local_pynput_computer.py
.old/commandagi_j2/testing/: computer_env.py
.old/commandagi_j2/utils/: chat_model_utils.py  env_viewer.py
.old/commandagi_j2/utils/gym2/: base_agent.py  base_episode.py  callbacks.py  evaluator_base.py  in_memory_episode.py  parallel_env.py  random_agent.py  spaces.py
benchmark_results/: benchmark_summary.txt
collected_data/: episode_0.json
commandAGI/: __main__.py  cli.py  client.py  schema.py  telemetry.py  types.py
commandAGI/_internal/: auth.py  config.py
commandAGI/_utils/: annotations.py  command.py  config.py  image.py  mcp_schema.py  network.py  partial.py  resource_schema.py  rfc6902.py  vnc.py
commandAGI/agents/: _api_provider_utils.py  advanced_agent.py  agent.py  base_agent copy.py  base_agent.py  clients.py  events.py  hub.py  openai.py  simple_agent.py  tools.py
commandAGI/computers/: TODO.md  __init__.py  __init__.pyi  base_computer.py  browser_computer.py  computer.py  computers.pyi  daemon_client_computer.py  e2b_desktop_computer.py  local_computer.py  local_pyautogui_computer.py  local_pynput_computer.py  misc_types.py  pigdev_computer.py  scrappybara_computer.py  vnc_computer.py
commandAGI/daemon/: __init__.py  cli.py  server.py
commandAGI/dev/: cli.py  update_daemon_client.py
commandAGI/gym/: __init__.py  drivers.py  schema.py  trainer.py
commandAGI/processors/: __init__.py  grid_overlay.py
commandAGI/utils/: __init__.py  image.py  viewer.py
commandAGI2/: __main__.py  cli.py  version.py
commandAGI2/_utils/: command.py  config.py  image.py  network.py
commandAGI2/computers/: __init__.py  __init__.pyi  base_computer.py  computers.pyi  daemon_client_computer.py  e2b_desktop_computer.py  local_computer.py  local_pyautogui_computer.py  local_pynput_computer.py  pigdev_computer.py  scrappybara_computer.py  vnc_computer.py
commandAGI2/daemon/: __init__.py  cli.py  server.py
commandAGI2/dev/: cli.py  update_daemon_client.py
commandAGI2/gym/: __init__.py  drivers.py  trainer.py
commandAGI2/processors/: __init__.py
commandAGI2/utils/: __init__.py  viewer.py
commandAGI_LAB/: cli.py  types.py
commandAGI_LAB/agents/: advanced_vision_language_computer_agent.py  base_agent.py  simple_vision_language_computer_agent.py
commandAGI_LAB/computers/: base_computer.py  base_docker_computer.py  base_kubernetes_computer.py  base_vnc_docker_computer.py  computer_types.py  e2b_desktop_computer.py  kubernetes_computer.py  local_pyautogui_computer.py  local_pynput_computer.py  lxde_vnc_docker_computer.py  lxde_vnc_kubernetes_computer.py  (+3 more)
commandLAB/: __main__.py  build_images.py  cli.py  daemon.py  types.py  version.py
commandagi_j2/: __init__.py  cli.py  compute_env.py  simple_computer_agent.py
commandlab/: .gitignore  CONTRIBUTING.md  pyproject.toml
commandlab/.github/: CODE_OF_CONDUCT.md  SECURITY.md  pull_request_template.md
commandlab/.github/ISSUE_TEMPLATE/: feature_request.md  integration_request.md
commandlab/commandlab/: cli.py  dev.py  types.py
commandlab/commandlab/agents/: simple_computer_agent.py
commandlab/commandlab/computers/: base_docker_computer.py  base_vnc_docker_computer.py  kubernetes_computer.py  local_pyautogui_computer.py  local_pynput_computer.py  lxde_vnc_docker_computer.py  lxde_vnc_kubernetes_computer.py  vnc_computer.py  vnc_kubernetes_computer.py
commandlab/commandlab/evals/: instruction_following_evaluator.py
commandlab/commandlab/testing/: computer_env.py
commandlab/commandlab/utils/: chat_model_utils.py  viewer.py
commandlab/dockerfiles/: lxde.Dockerfile
commandlab/resources/: icon.icns
developers/: index.html
dockerfiles/: lxde.Dockerfile
docs/: README.md  build_docs.py  concepts.md  examples.md  generate_api_docs.py  generate_example_docs.py  hub.md  index.md  installation.md  quickstart.md
examples/: 10_programming.py  11_gym_basic.py  12_gym_text_editing.py  13_gym_web_browsing.py  14_gym_training.py  15_gym_custom_task.py  16_gym_simple_agent.py  17_gym_react_agent.py  18_gym_multi_episode_training.py  1_getting_started.py  2_concepts.py  3_advanced_concepts.py  4_using_docker.py  5_using_kubernetes.py  6_scripting_computer_interactions.py  7_automating_computer_interactions.py  8_document_editing.py  9_using_the_internet.py  custom_vnc_rdp_config.py  docker_daemon_client_example.py  docker_daemon_cloud_example.py  docker_daemon_web_automation.py  hub_example.py  index.html  running_3_docker_containers.py  running_multiple_docker_containers.py  simple_gym_test.py  test_container_naming_and_ports.py  use_daemon_client.py  video_stream_demo.py
installation/: index.html
macros/: __init__.py  cli.py  doc_generator.py  example_macros.py  mkdocs_integration.py  utils.py
output/: extracted_text.txt  hello_world.py
quickstart/: index.html
search/: search_index.json
site/: 404.html  index.html  objects.inv
tests/: conftest.py  test_action_types.py  test_agent.py  test_agent_env_combinations.py  test_agent_env_combinations_flat.py  test_collection.py  test_driver.py  test_env.py  test_observation_types.py  test_pydantic_fix.py  test_types.py  test_version.py
tutorials/: index.html
(+713 files in other folders)
