[project]
name = "commandLAB"
version = "0.0.1"
description = ""
authors = [
    { name = "commandAGI", email = "hello@commandagi.com" },
    { name = "Jacob Valdez", email = "jacob@commandagi.com" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = ["rich==13.9.4", "pydantic==2.10.6", "typer==0.15.1"]

[tool.poetry.group.dev.dependencies]
mkdocs-autorefs = "^1.3.1"
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.5"
mkdocstrings = { extras = ["python"], version = "^0.28.1" }
mkdocs-jupyter = "^0.25.1"
pytest = "^8.3.4"
black = "^25.1.0"
isort = "^6.0.0"
ruff = "^0.9.7"
pillow = "^11.1.0"


[project.optional-dependencies]
# Legacy/existing extras for compatibility
local = ["pynput==1.7.7", "pyautogui==0.9.54", "mss==10.0.0"]
vnc = ["vncdotool==1.2.0"]
docker = ["docker==7.1.0"]
kubernetes = ["kubernetes==32.0.1"]
e2b-desktop = ["e2b-desktop==1.0.2"]
scrapybara = ["scrapybara==2.2.7"]
langchain = ["langchain==0.3.19"]
pig = ["pig-python==0.1.1"]
pytesseract = ["pytesseract==0.3.10"]
gymnasium = ["gymnasium==1.0.0", "numpy==2.2.3", "pillow==11.1.0"]

# Cloud provider specific daemon clients
daemon-client-aws = [
    # AWS dependencies
    "boto3==1.37.0",
    # base daemon client
    "requests==2.32.3",
    "pillow==11.1.0",
]

daemon-client-azure = [
    # Azure dependencies
    "azure-mgmt-containerinstance==10.1.0",
    "azure-identity==1.20.0",
    # base daemon client
    "requests==2.32.3",
    "pillow==11.1.0",
]

daemon-client-gcp = [
    # GCP dependencies
    "google-cloud-container==2.56.0",
    # base daemon client
    "requests==2.32.3",
    "pillow==11.1.0",
]

# Docker and Kubernetes daemon clients
daemon-client-docker = [
    # Include daemon-client dependencies explicitly
    "requests==2.32.3",
    "pillow==11.1.0",
    # Include docker dependencies
    "docker==7.1.0",
]

daemon-client-kubernetes = [
    # Include daemon-client dependencies explicitly
    "requests==2.32.3",
    "pillow==11.1.0",
    # Include kubernetes dependencies
    "kubernetes==32.0.1",
]

# All daemon client capabilities
daemon-client-all = [
    # AWS dependencies
    "boto3==1.37.0",
    # Azure dependencies
    "azure-mgmt-containerinstance==10.1.0",
    "azure-identity==1.20.0",
    # GCP dependencies
    "google-cloud-container==2.56.0",
    # Docker dependencies
    "docker==7.1.0",
    # Kubernetes dependencies
    "kubernetes==32.0.1",
    # Base daemon client
    "requests==2.32.3",
    "pillow==11.1.0",
]

# Daemon host dependencies
daemon-host = [
    "fastapi==0.115.8",
    "uvicorn==0.34.0",
    # Local dependencies
    "pynput==1.7.7",
    "pyautogui==0.9.54",
    "mss==10.0.0",
]


[project.urls]
Homepage = "https://commandagi.com"
Documentation = "https://commandagi.com/developers/commandLAB"
PyPI = "https://pypi.org/project/commandLAB/"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
