[project]
name = "commandagi-j2"
version = "0.1.0"
description = ""
authors = [{ name = "Jacob Valdez", email = "jacobfv123@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pyautogui (>=0.9.54,<0.10.0)",
    "mss (>=10.0.0,<11.0.0)",
    "langchain-core (>=0.3.35,<0.4.0)",
    "langchain (>=0.3.18,<0.4.0)",
    "langchain-community (>=0.3.17,<0.4.0)",
    "langchain-together (>=0.3.0,<0.4.0)",
    "langchain-openai (>=0.3.6,<0.4.0)",
    "langchain-anthropic (>=0.3.7,<0.4.0)",
    "langchain-huggingface (>=0.1.2,<0.2.0)",
    "transformers (>=4.48.3,<5.0.0)",
    "datasets (>=3.3.0,<4.0.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "e2b-desktop (>=1.0.2,<2.0.0)",
    "vncdotool (>=1.2.0,<2.0.0)",
    "typer (>=0.15.1,<0.16.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "pynput (>=1.7.7,<2.0.0)",
    "docker (>=7.1.0,<8.0.0)",
    "rich (>=13.9.4,<14.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
]

# [tool.poetry]
# packages = [
#     { include = "gym2", from = "gym2" },
#     { include = "commandagi_j2", from = "." }
# ]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
autoflake = "^2.3.1"
pytest = "^8.3.4"


[tool.poetry.scripts]
run-tests = "commandagi_j2.dev:run_tests"
run-doctests = "commandagi_j2.dev:run_doctests"
format-code = "commandagi_j2.dev:run_format"
