[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "commandlab"
version = "0.1.0"
description = "A modular framework for building AI-powered command-line applications"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []  # Base package includes core functionality
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/yourusername/commandlab"
Documentation = "https://commandlab.readthedocs.io/"
Repository = "https://github.com/yourusername/commandlab.git"

# Core package
[project.optional-dependencies]
core = []

# Main package
commandlab = [
    "commandlab-core"
]

# Integration packages
openrl = [
    "openai>=1.0.0",
    "gymnasium>=0.29.0",
]

langchain = [
    "langchain>=0.1.0",
    "langchain-openai>=0.0.1",
]

huggingface = [
    "transformers>=4.0.0",
    "torch>=2.0.0",
]

community = []

# Development dependencies
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "isort>=5.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
    "pytest-cov>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/commandlab",  # Now includes core functionality
    "src/commandlab_openrl",
    "src/commandlab_langchain",
    "src/commandlab_huggingface",
    "src/commandlab_community",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]